data/intermediate/generated/parser/SQL1A/SQLSimplifiedParser.py
# Generated from /Users/annaellebaiget/Desktop/MS_Thesis/ExplainFuzz/data/intermediate/grammars/final/SQL1A/SQLSimplifiedParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SQLSimplifiedParser ( Parser ):

    grammarFileName = "SQLSimplifiedParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "';'", "'*'", "'='", 
                     "'.'", "'/'", "'<'", "'>'", "<INVALID>", "<INVALID>", 
                     "'AND'", "'AS'", "'ASC'", "'CASE'", "'DESC'", "'DISTINCT'", 
                     "'ELSE'", "'FOR'", "'FROM'", "'GROUP'", "'HAVING'", 
                     "'NOT'", "'NULL'", "'ON'", "'OR'", "'ORDER'", "'SELECT'", 
                     "'THEN'", "'UNION'", "'WHEN'", "'WHERE'", "'JOIN'", 
                     "'BY'", "'DAY'", "'YEAR'", "'EXISTS'", "'EXTRACT'", 
                     "'INTERVAL'", "'SUBSTRING'", "'TIME'", "'VALUE'", "'END'", 
                     "'ROUND'", "'USING'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\\\\'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'''" ]

    symbolicNames = [ "<INVALID>", "OPEN_PAREN", "CLOSE_PAREN", "COMMA", 
                      "SEMI", "STAR", "EQUAL", "DOT", "SLASH", "LT", "GT", 
                      "PARAM", "Operator", "AND", "AS", "ASC", "CASE", "DESC", 
                      "DISTINCT", "ELSE", "FOR", "FROM", "GROUP_P", "HAVING", 
                      "NOT", "NULL_P", "ON", "OR", "ORDER", "SELECT", "THEN", 
                      "UNION", "WHEN", "WHERE", "JOIN", "BY", "DAY_P", "YEAR_P", 
                      "EXISTS", "EXTRACT", "INTERVAL", "SUBSTRING", "TIME", 
                      "VALUE_P", "END_P", "ROUND", "USING", "Identifier", 
                      "QuotedIdentifier", "UnterminatedQuotedIdentifier", 
                      "InvalidQuotedIdentifier", "InvalidUnterminatedQuotedIdentifier", 
                      "UnicodeQuotedIdentifier", "UnterminatedUnicodeQuotedIdentifier", 
                      "InvalidUnicodeQuotedIdentifier", "InvalidUnterminatedUnicodeQuotedIdentifier", 
                      "StringConstant", "UnterminatedStringConstant", "UnicodeEscapeStringConstant", 
                      "UnterminatedUnicodeEscapeStringConstant", "BeginDollarStringConstant", 
                      "BinaryStringConstant", "UnterminatedBinaryStringConstant", 
                      "InvalidBinaryStringConstant", "InvalidUnterminatedBinaryStringConstant", 
                      "HexadecimalStringConstant", "UnterminatedHexadecimalStringConstant", 
                      "InvalidHexadecimalStringConstant", "InvalidUnterminatedHexadecimalStringConstant", 
                      "Integral", "NumericFail", "Numeric", "PLSQLVARIABLENAME", 
                      "PLSQLIDENTIFIER", "Whitespace", "Newline", "LineComment", 
                      "BlockComment", "UnterminatedBlockComment", "MetaCommand", 
                      "EndMetaCommand", "ErrorCharacter", "EscapeStringConstant", 
                      "UnterminatedEscapeStringConstant", "InvalidEscapeStringConstant", 
                      "InvalidUnterminatedEscapeStringConstant", "DollarText", 
                      "EndDollarStringConstant", "AfterEscapeStringConstantWithNewlineMode_Continued" ]

    RULE_start = 0
    RULE_select_statement = 1
    RULE_union_list = 2
    RULE_c_expr = 3
    RULE_f_expr = 4
    RULE_integral_or_null = 5
    RULE_binary_op_fexpr_list = 6
    RULE_string_list = 7
    RULE_integral_list = 8
    RULE_binary_op_columnref_list = 9
    RULE_where_clause = 10
    RULE_join_clause = 11
    RULE_on_clause = 12
    RULE_group_clause = 13
    RULE_group_by_list = 14
    RULE_having_clause = 15
    RULE_sort_clause = 16
    RULE_column_list_or_star = 17
    RULE_column_list = 18
    RULE_sortby_list = 19
    RULE_from_list = 20
    RULE_from_clause = 21
    RULE_sortby = 22
    RULE_columnref = 23
    RULE_table_ref = 24
    RULE_typeidentifier = 25
    RULE_binary_op = 26
    RULE_math_op = 27
    RULE_logic_op = 28
    RULE_unary_op = 29
    RULE_identifier_or_star = 30
    RULE_gt_lt = 31
    RULE_asc_desc = 32
    RULE_collabel = 33

    ruleNames =  [ "start", "select_statement", "union_list", "c_expr", 
                   "f_expr", "integral_or_null", "binary_op_fexpr_list", 
                   "string_list", "integral_list", "binary_op_columnref_list", 
                   "where_clause", "join_clause", "on_clause", "group_clause", 
                   "group_by_list", "having_clause", "sort_clause", "column_list_or_star", 
                   "column_list", "sortby_list", "from_list", "from_clause", 
                   "sortby", "columnref", "table_ref", "typeidentifier", 
                   "binary_op", "math_op", "logic_op", "unary_op", "identifier_or_star", 
                   "gt_lt", "asc_desc", "collabel" ]

    EOF = Token.EOF
    OPEN_PAREN=1
    CLOSE_PAREN=2
    COMMA=3
    SEMI=4
    STAR=5
    EQUAL=6
    DOT=7
    SLASH=8
    LT=9
    GT=10
    PARAM=11
    Operator=12
    AND=13
    AS=14
    ASC=15
    CASE=16
    DESC=17
    DISTINCT=18
    ELSE=19
    FOR=20
    FROM=21
    GROUP_P=22
    HAVING=23
    NOT=24
    NULL_P=25
    ON=26
    OR=27
    ORDER=28
    SELECT=29
    THEN=30
    UNION=31
    WHEN=32
    WHERE=33
    JOIN=34
    BY=35
    DAY_P=36
    YEAR_P=37
    EXISTS=38
    EXTRACT=39
    INTERVAL=40
    SUBSTRING=41
    TIME=42
    VALUE_P=43
    END_P=44
    ROUND=45
    USING=46
    Identifier=47
    QuotedIdentifier=48
    UnterminatedQuotedIdentifier=49
    InvalidQuotedIdentifier=50
    InvalidUnterminatedQuotedIdentifier=51
    UnicodeQuotedIdentifier=52
    UnterminatedUnicodeQuotedIdentifier=53
    InvalidUnicodeQuotedIdentifier=54
    InvalidUnterminatedUnicodeQuotedIdentifier=55
    StringConstant=56
    UnterminatedStringConstant=57
    UnicodeEscapeStringConstant=58
    UnterminatedUnicodeEscapeStringConstant=59
    BeginDollarStringConstant=60
    BinaryStringConstant=61
    UnterminatedBinaryStringConstant=62
    InvalidBinaryStringConstant=63
    InvalidUnterminatedBinaryStringConstant=64
    HexadecimalStringConstant=65
    UnterminatedHexadecimalStringConstant=66
    InvalidHexadecimalStringConstant=67
    InvalidUnterminatedHexadecimalStringConstant=68
    Integral=69
    NumericFail=70
    Numeric=71
    PLSQLVARIABLENAME=72
    PLSQLIDENTIFIER=73
    Whitespace=74
    Newline=75
    LineComment=76
    BlockComment=77
    UnterminatedBlockComment=78
    MetaCommand=79
    EndMetaCommand=80
    ErrorCharacter=81
    EscapeStringConstant=82
    UnterminatedEscapeStringConstant=83
    InvalidEscapeStringConstant=84
    InvalidUnterminatedEscapeStringConstant=85
    DollarText=86
    EndDollarStringConstant=87
    AfterEscapeStringConstantWithNewlineMode_Continued=88

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_statement(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Select_statementContext,0)


        def SEMI(self):
            return self.getToken(SQLSimplifiedParser.SEMI, 0)

        def EOF(self):
            return self.getToken(SQLSimplifiedParser.EOF, 0)

        def getRuleIndex(self):
            return SQLSimplifiedParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = SQLSimplifiedParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.select_statement()
            self.state = 69
            self.match(SQLSimplifiedParser.SEMI)
            self.state = 70
            self.match(SQLSimplifiedParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SQLSimplifiedParser.SELECT, 0)

        def column_list_or_star(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Column_list_or_starContext,0)


        def FROM(self):
            return self.getToken(SQLSimplifiedParser.FROM, 0)

        def from_clause(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.From_clauseContext,0)


        def join_clause(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Join_clauseContext,0)


        def where_clause(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Where_clauseContext,0)


        def group_clause(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Group_clauseContext,0)


        def having_clause(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Having_clauseContext,0)


        def sort_clause(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Sort_clauseContext,0)


        def union_list(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Union_listContext,0)


        def DISTINCT(self):
            return self.getToken(SQLSimplifiedParser.DISTINCT, 0)

        def getRuleIndex(self):
            return SQLSimplifiedParser.RULE_select_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_statement" ):
                listener.enterSelect_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_statement" ):
                listener.exitSelect_statement(self)




    def select_statement(self):

        localctx = SQLSimplifiedParser.Select_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_select_statement)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(SQLSimplifiedParser.SELECT)
                self.state = 73
                self.column_list_or_star()
                self.state = 74
                self.match(SQLSimplifiedParser.FROM)
                self.state = 75
                self.from_clause()
                self.state = 76
                self.join_clause()
                self.state = 77
                self.where_clause()
                self.state = 78
                self.group_clause()
                self.state = 79
                self.having_clause()
                self.state = 80
                self.sort_clause()
                self.state = 81
                self.union_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.match(SQLSimplifiedParser.SELECT)
                self.state = 84
                self.match(SQLSimplifiedParser.DISTINCT)
                self.state = 85
                self.column_list_or_star()
                self.state = 86
                self.match(SQLSimplifiedParser.FROM)
                self.state = 87
                self.from_clause()
                self.state = 88
                self.sort_clause()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Union_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNION(self):
            return self.getToken(SQLSimplifiedParser.UNION, 0)

        def select_statement(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Select_statementContext,0)


        def getRuleIndex(self):
            return SQLSimplifiedParser.RULE_union_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnion_list" ):
                listener.enterUnion_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnion_list" ):
                listener.exitUnion_list(self)




    def union_list(self):

        localctx = SQLSimplifiedParser.Union_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_union_list)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 4]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(SQLSimplifiedParser.UNION)
                self.state = 94
                self.select_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class C_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnref(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.ColumnrefContext,0)


        def binary_op_columnref_list(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Binary_op_columnref_listContext,0)


        def unary_op(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Unary_opContext,0)


        def c_expr(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.C_exprContext,0)


        def binary_op(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Binary_opContext,0)


        def f_expr(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.F_exprContext,0)


        def OPEN_PAREN(self):
            return self.getToken(SQLSimplifiedParser.OPEN_PAREN, 0)

        def select_statement(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Select_statementContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(SQLSimplifiedParser.CLOSE_PAREN, 0)

        def STAR(self):
            return self.getToken(SQLSimplifiedParser.STAR, 0)

        def Integral(self):
            return self.getToken(SQLSimplifiedParser.Integral, 0)

        def Numeric(self):
            return self.getToken(SQLSimplifiedParser.Numeric, 0)

        def DISTINCT(self):
            return self.getToken(SQLSimplifiedParser.DISTINCT, 0)

        def string_list(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.String_listContext,0)


        def integral_list(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Integral_listContext,0)


        def getRuleIndex(self):
            return SQLSimplifiedParser.RULE_c_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterC_expr" ):
                listener.enterC_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitC_expr" ):
                listener.exitC_expr(self)




    def c_expr(self):

        localctx = SQLSimplifiedParser.C_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_c_expr)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.columnref()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.columnref()
                self.state = 99
                self.binary_op_columnref_list(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.unary_op()
                self.state = 102
                self.c_expr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.binary_op()
                self.state = 105
                self.c_expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.f_expr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 108
                self.match(SQLSimplifiedParser.OPEN_PAREN)
                self.state = 109
                self.select_statement()
                self.state = 110
                self.match(SQLSimplifiedParser.CLOSE_PAREN)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 112
                self.match(SQLSimplifiedParser.STAR)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 113
                self.match(SQLSimplifiedParser.Integral)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 114
                self.match(SQLSimplifiedParser.Numeric)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 115
                self.match(SQLSimplifiedParser.DISTINCT)
                self.state = 116
                self.c_expr()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 117
                self.match(SQLSimplifiedParser.OPEN_PAREN)
                self.state = 118
                self.string_list()
                self.state = 119
                self.match(SQLSimplifiedParser.CLOSE_PAREN)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 121
                self.match(SQLSimplifiedParser.OPEN_PAREN)
                self.state = 122
                self.integral_list()
                self.state = 123
                self.match(SQLSimplifiedParser.CLOSE_PAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class F_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SQLSimplifiedParser.Identifier, 0)

        def OPEN_PAREN(self):
            return self.getToken(SQLSimplifiedParser.OPEN_PAREN, 0)

        def c_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLSimplifiedParser.C_exprContext)
            else:
                return self.getTypedRuleContext(SQLSimplifiedParser.C_exprContext,i)


        def CLOSE_PAREN(self):
            return self.getToken(SQLSimplifiedParser.CLOSE_PAREN, 0)

        def EXTRACT(self):
            return self.getToken(SQLSimplifiedParser.EXTRACT, 0)

        def YEAR_P(self):
            return self.getToken(SQLSimplifiedParser.YEAR_P, 0)

        def FROM(self):
            return self.getToken(SQLSimplifiedParser.FROM, 0)

        def CASE(self):
            return self.getToken(SQLSimplifiedParser.CASE, 0)

        def WHEN(self):
            return self.getToken(SQLSimplifiedParser.WHEN, 0)

        def THEN(self):
            return self.getToken(SQLSimplifiedParser.THEN, 0)

        def ELSE(self):
            return self.getToken(SQLSimplifiedParser.ELSE, 0)

        def integral_or_null(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Integral_or_nullContext,0)


        def END_P(self):
            return self.getToken(SQLSimplifiedParser.END_P, 0)

        def binary_op_fexpr_list(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Binary_op_fexpr_listContext,0)


        def SUBSTRING(self):
            return self.getToken(SQLSimplifiedParser.SUBSTRING, 0)

        def Integral(self, i:int=None):
            if i is None:
                return self.getTokens(SQLSimplifiedParser.Integral)
            else:
                return self.getToken(SQLSimplifiedParser.Integral, i)

        def FOR(self):
            return self.getToken(SQLSimplifiedParser.FOR, 0)

        def ROUND(self):
            return self.getToken(SQLSimplifiedParser.ROUND, 0)

        def SLASH(self):
            return self.getToken(SQLSimplifiedParser.SLASH, 0)

        def COMMA(self):
            return self.getToken(SQLSimplifiedParser.COMMA, 0)

        def getRuleIndex(self):
            return SQLSimplifiedParser.RULE_f_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF_expr" ):
                listener.enterF_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF_expr" ):
                listener.exitF_expr(self)




    def f_expr(self):

        localctx = SQLSimplifiedParser.F_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_f_expr)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(SQLSimplifiedParser.Identifier)
                self.state = 128
                self.match(SQLSimplifiedParser.OPEN_PAREN)
                self.state = 129
                self.c_expr()
                self.state = 130
                self.match(SQLSimplifiedParser.CLOSE_PAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(SQLSimplifiedParser.OPEN_PAREN)
                self.state = 133
                self.c_expr()
                self.state = 134
                self.match(SQLSimplifiedParser.CLOSE_PAREN)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.match(SQLSimplifiedParser.EXTRACT)
                self.state = 137
                self.match(SQLSimplifiedParser.OPEN_PAREN)
                self.state = 138
                self.match(SQLSimplifiedParser.YEAR_P)
                self.state = 139
                self.match(SQLSimplifiedParser.FROM)
                self.state = 140
                self.c_expr()
                self.state = 141
                self.match(SQLSimplifiedParser.CLOSE_PAREN)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 143
                self.match(SQLSimplifiedParser.Identifier)
                self.state = 144
                self.match(SQLSimplifiedParser.OPEN_PAREN)
                self.state = 145
                self.match(SQLSimplifiedParser.CASE)
                self.state = 146
                self.match(SQLSimplifiedParser.WHEN)
                self.state = 147
                self.c_expr()
                self.state = 148
                self.match(SQLSimplifiedParser.THEN)
                self.state = 149
                self.c_expr()
                self.state = 150
                self.match(SQLSimplifiedParser.ELSE)
                self.state = 151
                self.integral_or_null()
                self.state = 152
                self.match(SQLSimplifiedParser.END_P)
                self.state = 153
                self.match(SQLSimplifiedParser.CLOSE_PAREN)
                self.state = 154
                self.binary_op_fexpr_list(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 156
                self.match(SQLSimplifiedParser.SUBSTRING)
                self.state = 157
                self.match(SQLSimplifiedParser.OPEN_PAREN)
                self.state = 158
                self.c_expr()
                self.state = 159
                self.match(SQLSimplifiedParser.FROM)
                self.state = 160
                self.match(SQLSimplifiedParser.Integral)
                self.state = 161
                self.match(SQLSimplifiedParser.FOR)
                self.state = 162
                self.match(SQLSimplifiedParser.Integral)
                self.state = 163
                self.match(SQLSimplifiedParser.CLOSE_PAREN)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 165
                self.match(SQLSimplifiedParser.ROUND)
                self.state = 166
                self.match(SQLSimplifiedParser.OPEN_PAREN)
                self.state = 167
                self.c_expr()
                self.state = 168
                self.match(SQLSimplifiedParser.SLASH)
                self.state = 169
                self.c_expr()
                self.state = 170
                self.match(SQLSimplifiedParser.COMMA)
                self.state = 171
                self.match(SQLSimplifiedParser.Integral)
                self.state = 172
                self.match(SQLSimplifiedParser.CLOSE_PAREN)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 174
                self.match(SQLSimplifiedParser.OPEN_PAREN)
                self.state = 175
                self.match(SQLSimplifiedParser.CASE)
                self.state = 176
                self.match(SQLSimplifiedParser.WHEN)
                self.state = 177
                self.c_expr()
                self.state = 178
                self.match(SQLSimplifiedParser.THEN)
                self.state = 179
                self.c_expr()
                self.state = 180
                self.match(SQLSimplifiedParser.ELSE)
                self.state = 181
                self.integral_or_null()
                self.state = 182
                self.match(SQLSimplifiedParser.END_P)
                self.state = 183
                self.match(SQLSimplifiedParser.CLOSE_PAREN)
                self.state = 184
                self.binary_op_fexpr_list(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Integral_or_nullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Integral(self):
            return self.getToken(SQLSimplifiedParser.Integral, 0)

        def NULL_P(self):
            return self.getToken(SQLSimplifiedParser.NULL_P, 0)

        def getRuleIndex(self):
            return SQLSimplifiedParser.RULE_integral_or_null

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegral_or_null" ):
                listener.enterIntegral_or_null(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegral_or_null" ):
                listener.exitIntegral_or_null(self)




    def integral_or_null(self):

        localctx = SQLSimplifiedParser.Integral_or_nullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_integral_or_null)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            _la = self._input.LA(1)
            if not(_la==25 or _la==69):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Binary_op_fexpr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def binary_op_fexpr_list(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Binary_op_fexpr_listContext,0)


        def binary_op(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.Binary_opContext,0)


        def f_expr(self):
            return self.getTypedRuleContext(SQLSimplifiedParser.F_exprContext,0)


        def getRuleIndex(self):
            return SQLSimplifiedParser.RULE_binary_op_fexpr_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary_op_fexpr_list" ):
                listener.enterBinary_op_fexpr_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary_op_fexpr_list" ):
                listener.exitBinary_op_fexpr_list(self)


